# RGS

./: .gitignore  01_simulation.py  02_multiple_simulations.py  README.md  RFS.py  RGS.py  RGS_experimental.py  RGS_test.py  __init__.py  data_generator.py  data_plotting.py  pyproject.toml  setup.py  sim_params_06.json  sim_params_test.json  simulation_main.py  temp.ipynb
RGS/: RGS.py
cluster_code/: real_data.py  simulation.py  simulation_matching_pursuit.py  simulation_train.py
data/: best_ks.csv  best_ms.csv  real_data_best_ks.csv  real_data_best_ks_sat.csv  real_data_best_ms.csv  real_data_best_ms_sat.csv  real_data_mse.csv  real_data_mse_sat.csv  simulations_mse.csv
rgs_experiments/: pyproject.toml
rgs_experiments/src/rgs_experiments/models/: bagging.py  data_smearing.py
rgs_experiments/src/rgs_experiments/plotting/: plotting.py  plotting_new.py  plotting_new_v2.py
rgs_experiments/src/rgs_experiments/simulation/config/: __init__.py  parameter_loader.py  parameter_validator.py
rgs_experiments/src/rgs_experiments/simulation/data/: data_generator.py  matrix_utils.py
rgs_experiments/src/rgs_experiments/simulation/metrics/: README.md  __init__.py  error_metrics.py
rgs_experiments/src/rgs_experiments/simulation/models/: model_evaluator.py
rgs_experiments/src/rgs_experiments/simulation/orchestration/: README.md  experiment_orchestrator.py
rgs_experiments/src/rgs_experiments/simulation/pipeline/: README.md  simulation_pipeline.py
rgs_experiments/src/rgs_experiments/utils/: result_combiner_util.py  sim_util.py  sim_util_dgs.py  snr_utils.py
(+72 files in other folders)
